--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ venv/
 # Ignorar archivos de logs y temporales
 *.log
 *.tmp
+.history/
+
 
 # Ignorar información del sistema operativo
 .DS_Store
